--- a/widget/src/main/res/values/colors.xml
+++ b/widget/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="dark">#FF333333</color>
+    <color name="gray">#FF666666</color>
+    <color name="divider">#FFCCCCCC</color>
 </resources>
