--- a/widget/src/main/res/values/styles.xml
+++ b/widget/src/main/res/values/styles.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="ExButtonStyle" parent="Widget.MaterialComponents.Button" />
+    <style name="ExButtonStyle" parent="Widget.MaterialComponents.Button">
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="android:minWidth">0dp</item>
+        <item name="android:paddingTop">@dimen/default_padding_vertical</item>
+        <item name="android:paddingBottom">@dimen/default_padding_vertical</item>
+        <item name="android:paddingStart">@dimen/default_padding_horizontal</item>
+        <item name="android:paddingEnd">@dimen/default_padding_horizontal</item>
+    </style>
 
     <style name="ExShapeAppearance">
         <item name="cornerFamily">cut</item>
