--- a/widget/src/main/res/values/colors.xml
+++ b/widget/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="dark">#FF333333</color>
     <color name="gray">#FF666666</color>
     <color name="divider">#FFCCCCCC</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
