--- a/widget/src/main/res/values/themes.xml
+++ b/widget/src/main/res/values/themes.xml
@@ -14,6 +14,9 @@
         <item name="android:colorControlNormal">@color/white</item>
         <item name="android:statusBarColor">#40000000</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <item name="toolbarStyle">@style/ExToolbarStyle</item>
+        <item name="materialCardViewStyle">@style/ExCardStyle</item>
     </style>
 
 </resources>
